# emoji-feedback

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml  generate_auth.py
examples/: de.toml  en.toml
src/: auth_utils.rs  file_utils.rs  main.rs
static/: index.html  script.js  style.css
static/assets/: README.md
templates/: index.html.hbs
