[package]
name = "emoji-feedback"
version = "0.1.0"
authors = ["Mikhail Pak <mikhail.pak@tum.de>"]
license = "BSD-3-Clause"
description = "Quick and dirty emoji feedback app"
readme = "README.md"
keywords = ["feedback"]
publish = false

[dependencies]
blake2 = "^0.7.0"
chrono = "^0.4.2"
clap = "^2.31.2"
constant_time_eq = "^0.1.3"
data-encoding = "2.1.1"
rocket = "^0.3.8"
rocket_codegen = "^0.3.8"
serde = "^1.0.39"
serde_derive = "^1.0.39"
toml = "^0.4.6"

[dependencies.rocket_contrib]
version = "^0.3.8"
default-features = false
features = ["handlebars_templates"]
