[package]
name = "emoji-feedback"
version = "0.1.0"
authors = ["Mikhail Pak <mikhail.pak@tum.de>"]
license = "BSD-3-Clause"
description = "Quick and dirty emoji feedback app"
readme = "README.md"
keywords = ["feedback"]
publish = false

[dependencies]
blake2 = "^0.7.1"
chrono = "^0.4.4"
clap = "^2.32.0"
constant_time_eq = "^0.1.3"
data-encoding = "2.1.1"
rocket = "^0.3.14"
rocket_codegen = "^0.3.14"
serde = "^1.0.67"
serde_derive = "^1.0.67"
toml = "^0.4.6"

[dependencies.rocket_contrib]
version = "^0.3.14"
default-features = false
features = ["handlebars_templates"]
